gateways/test-run-gateway/httpbin-gtw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gtw
  namespace: test-gtw
  labels:
    app.kubernetes.io/part-of: test-run-gateway
    backstage.io/kubernetes-id: httpbin-gtw
  annotations:
    backstage.io/catalog-entity: resource:default/httpbin-gtw
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
